Fix Windows SRV DNS bug (stale cached Java runtime never refreshed on update); fix sidebar click race; add launcher log file; v0.5.2
- Root cause of "SRV redirect resolver" ClassNotFoundException on
  Windows: JavaRuntimeFallback caches a full copy of the bundled Java
  runtime under ~/.velo-client/java-runtime the first time a game is
  launched, but never refreshed it again - so a machine whose cache
  was made by an old launcher build (before ALL-MODULE-PATH was added
  to launcher/build.gradle) stayed stuck missing jdk.naming.dns
  forever, even after installing every later update. Confirmed
  directly against this machine's own stale cache (created before
  that fix, still missing the module). Now stamps the cache with the
  launcher version that produced it and re-copies whenever that
  doesn't match the running version.
- Fixed an intermittent "clicking Running/Quick Launch sidebar rows
  sometimes does nothing" bug: the Running section rebuilt every row
  from scratch on any change to the running-instances list, which
  mutates from a background thread the instant any tracked process
  exits - a rebuild landing between a click's press and release
  replaced the row being clicked with a new Node, swallowing the
  click. Rows are now reused across refreshes instead of recreated.
- Added a persistent ~/.velo-client/logs/launcher.log (previous
  session kept as .1) - a jpackage-installed GUI app has no visible
  console, so every error was previously invisible outside a dev
  environment.
- Bump to 0.5.2 (supersedes the still-broken 0.5.1 release).