@@ -1,9 +1,11 @@
 package net.veloclient.launcher.launch;
 
+import net.veloclient.launcher.AppVersion;
 import net.veloclient.launcher.data.VeloPaths;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
@@ -23,27 +25,48 @@ import java.nio.file.StandardCopyOption;
  * copies it into a cache directory of its own the first time it's actually
  * needed - never into the install directory itself, which might not be
  * writable by a normal user (e.g. Program Files on Windows).
+ *
+ * <p>The cached copy is stamped with the launcher version that produced it
+ * (a {@code .source-version} marker file next to it) and re-copied whenever
+ * that no longer matches {@link AppVersion#VERSION} - this used to cache
+ * forever after the very first launch, so a machine whose cache was created
+ * by an old launcher build stayed stuck on that old runtime image even after
+ * installing every later update. That's a real, confirmed bug, not a
+ * hypothetical one: when {@code --add-modules ALL-MODULE-PATH} was added to
+ * fix Minecraft's own DNS SRV redirect resolver needing {@code
+ * jdk.naming.dns} (see launcher/build.gradle), every machine that had
+ * already run an older launcher build kept right on missing that module
+ * forever, since nothing ever told this cache to refresh.
  */
 public final class JavaRuntimeFallback {
+
+	private static final String VERSION_MARKER_FILE = ".source-version";
 
 	private JavaRuntimeFallback() {
 	}
 
-	/** @return a working "java"/"java.exe" path, copying the running JVM's own runtime into a cache dir the first time this is needed */
+	/** @return a working "java"/"java.exe" path, copying the running JVM's own runtime into a cache dir the first time this is needed (or whenever the launcher itself has been updated since it was last cached) */
 	public static Path ensureAvailable() throws IOException {
 		boolean isWindows = OsRules.currentOsName().equals("windows");
 		String exeName = isWindows ? "java.exe" : "java";
 		Path cachedRuntimeDir = VeloPaths.root().resolve("java-runtime");
 		Path cachedJava = cachedRuntimeDir.resolve("bin").resolve(exeName);
-		if (Files.exists(cachedJava)) {
+		Path versionMarker = cachedRuntimeDir.resolve(VERSION_MARKER_FILE);
+		if (Files.exists(cachedJava) && Files.exists(versionMarker)
+				&& AppVersion.VERSION.equals(readMarker(versionMarker))) {
 			return cachedJava;
 		}
+
+		// Either never cached, or cached by a launcher version other than
+		// this one - wipe and re-clone rather than risk mixing an old
+		// runtime image with whatever this version now needs.
+		deleteRecursively(cachedRuntimeDir);
 
 		// "java" needs its whole runtime tree alongside it (lib/, the linked
 		// module image, ...) - the running app's own java.home already has
 		// all of that (it's running off it right now), just not the bin/
-		// launcher itself, so clone the whole thing into our cache once
-		// rather than trying to figure out the minimal subset.
+		// launcher itself, so clone the whole thing into our cache rather
+		// than trying to figure out the minimal subset.
 		Path runningRuntime = Path.of(System.getProperty("java.home"));
 		copyRuntimeTree(runningRuntime, cachedRuntimeDir);
 
@@ -59,7 +82,27 @@ public final class JavaRuntimeFallback {
 		if (!isWindows) {
 			cachedJava.toFile().setExecutable(true);
 		}
+		Files.writeString(versionMarker, AppVersion.VERSION, StandardCharsets.UTF_8);
 		return cachedJava;
+	}
+
+	private static String readMarker(Path marker) {
+		try {
+			return Files.readString(marker, StandardCharsets.UTF_8).strip();
+		} catch (IOException e) {
+			return "";
+		}
+	}
+
+	private static void deleteRecursively(Path dir) throws IOException {
+		if (!Files.exists(dir)) {
+			return;
+		}
+		try (var files = Files.walk(dir)) {
+			for (Path path : files.sorted(java.util.Comparator.reverseOrder()).toList()) {
+				Files.deleteIfExists(path);
+			}
+		}
 	}
 
 	private static void copyRuntimeTree(Path source, Path dest) throws IOException {
